--- a/lv-frontend/package.json
+++ b/lv-frontend/package.json
@@ -9,7 +9,10 @@
   },
   "dependencies": {
     "@mdi/font": "7.4.47",
+    "axios": "^1.7.7",
     "core-js": "^3.37.1",
+    "redaxios": "^0.5.1",
+    "redux": "^5.0.1",
     "roboto-fontface": "*",
     "vue": "^3.4.31",
     "vuetify": "^3.6.11"
